# justctf-2023

./: README.md
challenges/cloud_easyauth/: README.md
challenges/cloud_easyauth/private/: .gitignore  README.md  build_and_run.sh  metadata.json
challenges/crypto_multi_auth/: README.md
challenges/crypto_multi_auth/private/: metadata.json  run.sh
challenges/crypto_vaulted/: README.md
challenges/crypto_vaulted/private/: README.md  flag.txt  metadata.json  run.sh
challenges/misc_ecc_for_dummies/: README.md
challenges/misc_ecc_for_dummies/private/: metadata.json
challenges/misc_ecc_not_only_for_dummies/: README.md
challenges/misc_ecc_not_only_for_dummies/private/: metadata.json  run.sh  solve.sh
challenges/misc_formula_l/: README.md
challenges/misc_formula_l/private/: Makefile  description.md  metadata.json  run.sh
challenges/misc_pyplugins/: README.md
challenges/misc_pyplugins/private/: Description.md  metadata.json  solution
challenges/misc_safeblog/: README.md
challenges/misc_safeblog/private/: Description.md  README.md  metadata.json  run.sh
challenges/misc_secure_db/: README.md
challenges/misc_secure_db/private/: .clang-format  .dockerignore  .gitattributes  .gitignore  Description.md  README.md  Readme.md  docker-compose.yml  frontend.Dockerfile  metadata.json  oracle.Dockerfile  run.sh  solve.sh
challenges/misc_secure_db/private/src/proto/: CMakeLists.txt  oracle.proto
challenges/misc_secure_db/private/src/proto/cmake/: GRPC_Util.cmake
challenges/misc_secure_db/public/: README.md  docker-compose.yml  frontend.Dockerfile  oracle.Dockerfile
challenges/misc_secure_db/public/src/: CMakeLists.txt  download_third-party.sh
challenges/misc_secure_db/public/src/common/: db.cpp
challenges/pwn_baby_otter/: README.md
challenges/pwn_baby_otter/private/: README.md  metadata.json  run.sh  solve.sh
challenges/pwn_mystery_locker/: README.md
challenges/pwn_mystery_locker/private/: .gitignore  Readme.md  metadata.json  run.sh
challenges/pwn_notabug/: README.md
challenges/pwn_notabug/private/: metadata.json
challenges/pwn_notabug2/: README.md
challenges/pwn_notabug2/private/: metadata.json  solve.sh
challenges/pwn_nucleus/: README.md
challenges/pwn_nucleus/private/: README.md  metadata.json  run.sh
challenges/pwn_tic_tac_pwn/: README.md
challenges/pwn_tic_tac_pwn/private/: README.md  metadata.json  solve_simple.sh
challenges/pwn_welcome_in_my_house/: README.md
challenges/pwn_welcome_in_my_house/private/: metadata.json
challenges/pwn_windytooth/: README.md
challenges/pwn_windytooth/private/: README.md  metadata.json  solve.sh
challenges/re_mango/: README.md
challenges/re_mango/private/: .gitignore  README.md  metadata.json
challenges/re_nvm/: README.md
challenges/re_nvm/private/: .gitignore  Readme.md  metadata.json
challenges/re_nvm/private/private/worker/: CMakeLists.txt
challenges/re_nvm/private/private/worker/src/: CMakeLists.txt  decoder.hpp  instruction.hpp  instruction_set.hpp  main.cpp  socket.hpp  utils.hpp  vm.hpp
challenges/re_rustberry/: README.md
challenges/re_rustberry/private/: Readme.md  metadata.json
challenges/re_thiefcat/: README.md
challenges/re_thiefcat/private/: README.md  metadata.json
challenges/re_trial_of_bugs/: README.md
challenges/re_trial_of_bugs/private/: README.md  metadata.json  run.sh
challenges/re_trial_of_data/: README.md
challenges/re_trial_of_data/private/: metadata.json
challenges/web_aquatic_delights/: README.md
challenges/web_aquatic_delights/private/: Description.md  README.md  metadata.json  run.sh
challenges/web_aquatic_delights/public/: challenge.7z
challenges/web_dangerous/: README.md
challenges/web_dangerous/private/: metadata.json
challenges/web_essamtp/: README.md
challenges/web_essamtp/private/: README.md  metadata.json  run.sh
challenges/web_extra-safe-security-layers/: README.md
challenges/web_extra-safe-security-layers/private/: exploit.py  metadata.json  run.sh
challenges/web_mongodb/: README.md
challenges/web_mongodb/private/: metadata.json  run.sh
challenges/web_mongodb2/: README.md
challenges/web_mongodb2/private/: metadata.json  run.sh
challenges/web_perfectproduct/: README.md
challenges/web_perfectproduct/private/: INTERNAL.md  (+4 more)
challenges/web_phantom/: README.md
(+205 files in other folders)
